--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "main": "server.js",
+  "main": "./server.js",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
